Bug 60353 - [4.9 Regression] Firefox build failure #3 caused by r208157
Summary: [4.9 Regression] Firefox build failure #3 caused by r208157
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.9.0
: P1 normal
Target Milestone: 4.9.0
Assignee: Jason Merrill
URL:
Keywords: rejects-valid
Depends on:
Blocks:
 
Reported: 2014-02-27 07:16 UTC by Markus Trippelsdorf
Modified: 2014-02-27 16:50 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2014-02-27 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Markus Trippelsdorf 2014-02-27 07:16:59 UTC
r208157 causes:

markus@x4 skia % cat test.ii
struct A {
  A(int);
};
typedef struct {
  A format;
} B;

markus@x4 skia % g++ -std=c++11 -c test.ii
test.ii: In constructor ‘B::B()’:
test.ii:6:3: error: no matching function for call to ‘A::A()’
 } B;
   ^
test.ii:6:3: note: candidates are:
test.ii:2:3: note: A::A(int)
   A(int);
   ^
test.ii:2:3: note:   candidate expects 1 argument, 0 provided
test.ii:1:8: note: constexpr A::A(const A&)
 struct A {
        ^
test.ii:1:8: note:   candidate expects 1 argument, 0 provided
test.ii:1:8: note: constexpr A::A(A&&)
test.ii:1:8: note:   candidate expects 1 argument, 0 provided
test.ii: At global scope:
test.ii:4:16: note: synthesized method ‘B::B()’ first required here 
 typedef struct {
                ^
Comment 1 Richard Biener 2014-02-27 09:38:09 UTC
Confirmed.
Comment 2 Jason Merrill 2014-02-27 16:21:31 UTC
Author: jason
Date: Thu Feb 27 16:20:59 2014
New Revision: 208200

URL: http://gcc.gnu.org/viewcvs?rev=208200&root=gcc&view=rev
Log:
	PR c++/60353
	PR c++/55877
	* decl2.c (tentative_decl_linkage): Don't mess with functions that
	are not yet defined.

Added:
    trunk/gcc/testsuite/g++.dg/other/anon6.C
Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/decl2.c
Comment 3 Jason Merrill 2014-02-27 16:50:20 UTC
Fixed.