	PR c++/60353 	PR c++/55877 	* decl2.c (tentative_decl_linkage): Don't mess with functions that 	are not yet defined.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@208200 138bc75d-0d04-0410-961f-82ee72b054a4